optimize string matching